[package]
edition = "2021"
name = "translation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
base64 = "0.21"
ecb = {path = "./ecb", features = ["alloc"]}
rand = "0.8"
reqwest = {version = "0.11", features = ["blocking", "json"]}
rust-crypto = "0.2.36"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
