[package]
authors = ["JN.X <xyanyue@gmail.com>"]
description = "A simple translation API. "
edition = "2021"
keywords = ["translation"]
license = "BSD-3-Clause"
name = "translation_api"
repository = "https://github.com/xyanyue/translation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
base64 = "0.21"
ecb = {version = "0.1.1", features = ["alloc"]}
rand = "0.8"
rand_user_agent = "0.1"
# regex = "1.8"
reqwest = {version = "0.11", features = ["blocking", "json"]}
rust-crypto = "0.2.36"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
